--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "",
-    "password": "",
+    "email": "p.senaris00@gmail.com",
+    "password": "DaiwaScarlet",
     "2FASecret": "",
     "i_user": "",
     "proxy": "",
