--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
     "email": "p.senaris00@gmail.com",
-    "password": "DaiwaScarlet",
+    "password": "finnslwly",
     "2FASecret": "",
     "i_user": "",
     "proxy": "",
