--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "facebookAccount": {
-    "email": "fuydasitri@necub.com",
-    "password": "penelope1123",
+    "email": "sierrakien3@gmail.com",
+    "password": "kinginamopatrick",
     "2FASecret": "",
     "i_user": "",
     "proxy": "",
